user function added

--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -26,6 +26,14 @@ $(document).ready(function(){
                 error : function (error) {
                     console.log(error);
                 }
+            }).done(function(result) {
+                console.log(result);
+                if (result == 0) {
+                    alert("fail!");
+                }
+                if (result == 1) {
+                    alert("success!");
+                }
             });
         });
     });
