--- a/src/main/resources/static/profilePage.html
+++ b/src/main/resources/static/profilePage.html
@@ -18,5 +18,6 @@
 <p>...............</p>
 <h2 style="margin-top: 1.5cm">Search History</h2>
 <p>...............</p>
+<a href="http://localhost:63342/WebDoctor/static/changepasswordPage.html?_ijt=9uhe63vuh5lnigk86f1n44gs1h" target="_blank">Change your password here</a><br>
 </body>
 </html>
