--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -51,6 +51,13 @@
                 console.log(error);
             }
 
+        })
+        var res = res.done(function(result) {
+            console.log(res.responseText);
+            var obj = JSON.parse(res.responseText);
+            document.getElementById("userID").innerHTML = obj.ID;
+            document.getElementById("email").innerHTML = obj.Email
+            document.getElementById("Aut").innerHTML = obj.Authority;
         });
     });
     function getCookie(c_name)
@@ -79,6 +86,7 @@
     } else {
         userbtn.appendChild(document.createTextNode('Login'));
     }
+    document.getElementById("userID").innerHTML="My First JavaScript"
 
 
 </script>
@@ -105,6 +113,6 @@
 <h1 style="color: #fefefe;margin-top: 2cm;font-size: large">Email</h1>
 <h2 id="email"></h2>
 <h1 style="color: #fefefe;margin-top: 2cm;font-size: large">Authority</h1>
-<h2 id="Authority"></h2>
+<h2 id="Aut"></h2>
 </body>
 </html>
