--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -7,42 +7,43 @@
 </head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
-    function getCookie(c_name)
-    {
-        if (document.cookie.length>0)
-        {
-            c_start=document.cookie.indexOf(c_name + "=")
-            if (c_start!=-1)
-            {
-                c_start=c_start + c_name.length+1
-                c_end=document.cookie.indexOf(";",c_start)
-                if (c_end==-1) c_end=document.cookie.length
-                return unescape(document.cookie.substring(c_start,c_end))
-            }
-        }
-        return ""
-    }
-
-    console.log("000000");
-    var username = getCookie('username');
-    console.log(username);
-    var userbtn = document.getElementById('userbtn');
-    if (username != "") {
-        userbtn.appendChild(document.createTextNode('welcome '));
-        userbtn.appendChild(document.createTextNode(username));
-    } else {
-        userbtn.appendChild(document.createTextNode('Login'));
-    }
+//    function getCookie(c_name)
+//    {
+//        if (document.cookie.length>0)
+//        {
+//            c_start=document.cookie.indexOf(c_name + "=")
+//            if (c_start!=-1)
+//            {
+//                c_start=c_start + c_name.length+1
+//                c_end=document.cookie.indexOf(";",c_start)
+//                if (c_end==-1) c_end=document.cookie.length
+//                return unescape(document.cookie.substring(c_start,c_end))
+//            }
+//        }
+//        return ""
+//    }
+//
+//    console.log("000000");
+//    var username = getCookie('username');
+//    console.log(username);
+//    var userbtn = document.getElementById('userbtn');
+//    if (username != "") {
+//        userbtn.appendChild(document.createTextNode('welcome '));
+//        userbtn.appendChild(document.createTextNode(username));
+//    } else {
+//        userbtn.appendChild(document.createTextNode('Login'));
+//    }
     var g;
     var res;
-    username = "aaaaa"
+    var obj2 = {};
+    obj2.username = "12345";
     $(function(callback) {
 
         res = $.ajax({
-            url: '/USERPAGE',
+            url: '/UserPage',
             type: 'POST',
             dataType: 'json',
-            data: username,
+            data: obj2,
             contentType: "application/json; charset=utf-8",
             success: function (data) {
                 callback(data);
