--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -32,7 +32,7 @@
 
 
 <body style="background-color:#1aa8a8">
-<button id="btn1" id="Edit" type="button" onclick="jumpToEdit()">Edit</button>
+<button id="editbtn" id="Edit" type="button" onclick="jumpToEdit()">Edit</button>
 
 <div class="top" style="float:left"><h1>WebDoctor</h1></div>
 
