fuck this shit I'm out

--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -215,10 +215,6 @@ window.onload = function(){
 
     span2.onclick = function() {
         modal2.style.display = "none";
-//        var symptomList = document.getElementById('symptomList');
-//        while (symptomList.firstChild) {
-//            symptomList.removeChild(symptomList.firstChild);
-//        }
     }
 
     // When the user clicks anywhere outside of the modal, close it
@@ -251,7 +247,7 @@ window.onload = function(){
         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     }
 
-    /* Modal Content */
+    /*  Content */
     .modal-content {
         background-color: #1aa8b9;
         margin: auto;
