--- a/src/main/resources/static/editDescriptionPage.html
+++ b/src/main/resources/static/editDescriptionPage.html
@@ -140,7 +140,6 @@ if (username != "") {
 
 
 function submitChange() {
-
     var obj = {};
     var content = tinyMCE.get('mytextarea').getContent();
     var title = getCookie('title');
@@ -159,13 +158,13 @@ function submitChange() {
             contentType: "application/json; charset=utf-8",
             success: function (data) {
                 callback(data);
+                console.log("success");
             },
             error: function (error) {
                 console.log(error);
             }
         });
     });
-
 }
 </script>
 
