--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -23,18 +23,15 @@
     }
 
     #allmap {
+        margin: auto;
         width: 100%;
-        height: 400px;
+        height: 350px;
         background-color: grey;
     }
 
     .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
+    margin : 0 auto;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
@@ -45,11 +42,13 @@
     .modal-content {
     background-color: #1aa8b9;
     margin: auto;
-    padding: 20px;
-    padding-bottom: 10%;
     border: 1px solid #888;
     width: 80%;
     height: auto;
+    }
+
+    .modal-dialog{
+    width: auto!important;
     }
 
     body {
@@ -153,18 +152,16 @@
         </div>
     </form>
 
-    <div class="modal fade" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="text-align: center;">
-        <div class="modal-dialog" role="document" style="width:auto">
-            <div class="modal-content" style="width: 700px;height:440px;margin-left: auto;margin-right: auto;margin-top: 120px;">
-                <div class="modal-body">
-                    <span class="close">CLOSE</span>
-                    <div class="clearfix"></div>
-                    <div  class="modify-content">
-                        <div id="allmap"></div>
-                    </div>
-
-                    <div class="clearfix"></div>
+    <div class="modal" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="text-align: center;">
+        <div class="modal-content" style="width: 700px;height:440px;margin-left: auto;margin-right: auto;margin-top: 120px;">
+            <div class="modal-body">
+                <span class="close">CLOSE</span>
+                <div class="clearfix"></div>
+                <div  class="modify-content">
+                    <div id="allmap"></div>
                 </div>
+
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
