create page updated

--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -61,9 +61,9 @@
     float: right;
     }
 
-    #titleEle {
+    #titleP {
     font-size: 28px;
-    left:218px; top:60px; right:0; bottom:0;
+    margin: auto;
     color: #fefefe;
     }
 
@@ -82,14 +82,10 @@
     </div>
 </div>
 
-<div id="titleArea">
-    <h2 id="titleEle"></h2>
-</div>
-
 <div id="editorArea" style="width:800px; margin:0 auto;">
-    <form id="textform" method="post" style="width: 100%">
-        Please put in a title:<br>
-        <input type="text" name="title" id="desTitle">
+    <form id="textform" method="post">
+        <p id="titleP"> Put in a title: </p>
+        <input type="text" name="title" id="titleEle" style= "width: 100%">
 
         <textarea name="contnet" id="mytextarea"></textarea>
 
@@ -131,10 +127,7 @@ var title = getCookie('title');
 console.log("!!!!!!!");
 console.log(content);
 var userbtn = document.getElementById('userbtn');
-var titleEle = document.getElementById('titleEle');
-var editor = document.getElementById('mytextarea');
-editor.appendChild(document.createTextNode(content));
-titleEle.appendChild(document.createTextNode(title));
+
 if (username != "") {
     userbtn.appendChild(document.createTextNode('welcome '));
     userbtn.appendChild(document.createTextNode(username));
@@ -146,7 +139,7 @@ if (username != "") {
 function submitChange() {
     var obj = {};
     var content = tinyMCE.get('mytextarea').getContent();
-    var title = getCookie('title');
+    var title = document.getElementById('titleEle').value;
     obj.content = content;
     obj.title = title;
 
@@ -155,7 +148,7 @@ function submitChange() {
 
     $(function(callback) {
         $.ajax({
-            url: '/EditDescription',
+            url: '/CreateDescription',
             type: 'POST',
             dataType: 'json',
             data : JSON.stringify(obj),
