--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -5,10 +5,7 @@
     <meta content="utf-8" http-equiv="encoding">
 
 </head>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script>
-    function checknewpassword()
-</script>
+
 <style>
     body {
         background-color: #1aa8a8;
@@ -81,12 +78,12 @@
 <body>
 
 <div class="middle">
-    <form>
+    <form action="" method="post">
         <div class="container">
             <input type="text" placeholder="Enter Old Password" id="oldpassword" required><br>
             <input type="password" placeholder="Enter New Password" id="newpassword" name="newpassword" required><br>
             <input type="password" placeholder="Renter New Password"><br>
-            <button id="loginbtn" type="button">Change!</button>
+            <button id="submit" onclick="check()" type="button">Change!</button>
             <button type="submit" style="background-color: green">Cancel</button>
 
         </div>
@@ -95,4 +92,22 @@
 </div>
 
 </body>
+<script>
+function check() {
+var pw1 = document.getElementById("oldpassword").value;
+var pw2 = document.getElementById("newpassword").value;
+if(pw1 == pw2) {
+
+document.getElementById("submit").disabled = false;
+}
+else {
+    alert("New password does not match")
+    document.getElementById("submit").disabled = true;
+}
+if( pw1==0 ||pw2==0) {
+        alert("Please Enter your New Password")
+        document.getElementById("submit").disabled = false;
+    }
+}
+</script>
 </html>
