--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -31,7 +31,8 @@
 <h1 style="color: #fefefe;margin-top: 2cm;font-size: large">Authority</h1>
 <h2 id="Aut"></h2>
 <div style="margin-top: 80px">
-<a href="http://localhost:63342/WebDoctor/static/changepasswordPage.html?_ijt=9uhe63vuh5lnigk86f1n44gs1h" target="_blank">Change your pass
+<a href="http://localhost:63342/WebDoctor/static/changepasswordPage.html?_ijt=9uhe63vuh5lnigk86f1n44gs1h" target="_blank">Change
+    your password
 </div>
 </body>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
