--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="container" style="background-color:#1aa8a8">
-            <a href="/CreateDescriptionPage">Create a disease</a>
+            <a href="/CreateDescriptionPage">Create a new disease</a>
         </div>
     </form>
 </div>
