--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -47,6 +47,7 @@
     }
 
     .container {
+        margin-top: 200px;
         padding: 16px;
     }
 
@@ -80,9 +81,9 @@
 <div class="middle">
     <form action="" method="post">
         <div class="container">
-            <input type="text" placeholder="Enter Old Password" id="oldpassword" required><br>
+            <!--<input type="text" placeholder="Enter Old Password" id="oldpassword" required><br>-->
             <input type="password" placeholder="Enter New Password" id="newpassword" name="newpassword" required><br>
-            <input type="password" placeholder="Renter New Password"><br>
+            <input type="password" placeholder="Renter New Password" id="newpassword2"><br>
             <button id="submit" onclick="check()" type="button">Change!</button>
             <button type="submit" style="background-color: green">Cancel</button>
 
@@ -92,22 +93,43 @@
 </div>
 
 </body>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
 function check() {
-var pw1 = document.getElementById("oldpassword").value;
-var pw2 = document.getElementById("newpassword").value;
-if(pw1 == pw2) {
-
-document.getElementById("submit").disabled = false;
-}
-else {
+var pw1 = document.getElementById("newpassword").value;
+var pw2 = document.getElementById("newpassword2").value;
+if(pw1 !== pw2) {
     alert("New password does not match")
-    document.getElementById("submit").disabled = true;
+    return;
 }
-if( pw1==0 ||pw2==0) {
+ if( pw1==0 ||pw2==0) {
         alert("Please Enter your New Password")
-        document.getElementById("submit").disabled = false;
+        return;
     }
+    var res;
+    var obj = {};
+     obj.password = pw2;
+     $(function(callback) {
+         res = $.ajax({
+             url: '/ChangePassword',
+             type: 'POST',
+             dataType: 'json',
+             data: JSON.stringify(obj),
+             contentType: "application/json; charset=utf-8",
+             success: function (data) {
+                 callback(data);
+             },
+             error: function (error) {
+                 console.log(error);
+             }
+         })
+         var res = res.done(function(result) {
+             console.log(res.responseText);
+             var obj = JSON.parse(res.responseText);
+
+         })
+     })
+
 }
 </script>
 </html>
