--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -16,7 +16,7 @@
         border: none;
         cursor: pointer;
         width: 12%;
-</style>
+    }</style>
 
 <body style="background-color: #1aa8b9">
 <div id="usersection" align="right">
@@ -31,8 +31,12 @@
 <h1 style="color: #fefefe;margin-top: 2cm;font-size: large">Authority</h1>
 <h2 id="Aut"></h2>
 <div style="margin-top: 80px">
-<a href="http://localhost:63342/WebDoctor/static/changepasswordPage.html?_ijt=9uhe63vuh5lnigk86f1n44gs1h" target="_blank">Change
-    your password
+<a href="/ChangePassword" target="_blank">Change your password </a>
+    <br>
+    <br>
+    <a href="/ChangeEmail" target="_blamk">Change your Email</a>
+
+
 </div>
 </body>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -73,7 +77,7 @@
             url: '/UserPage',
             type: 'POST',
             dataType: 'json',
-            data: obj2,
+            data: JSON.stringify(obj2),
             contentType: "application/json; charset=utf-8",
             success: function (data) {
                 callback(data);
@@ -86,9 +90,18 @@
         var res = res.done(function(result) {
             console.log(res.responseText);
             var obj = JSON.parse(res.responseText);
-            document.getElementById("userID").innerHTML = obj.ID;
-            document.getElementById("email").innerHTML = obj.Email
-            document.getElementById("Aut").innerHTML = obj.Authority;
+            document.getElementById("username").innerHTML=obj.username
+            document.getElementById("userID").innerHTML = obj.id;
+            document.getElementById("email").innerHTML = obj.email
+            if(obj.authority == 0) {
+                document.getElementById("Aut").innerHTML = "User";
+            }
+            else if(obj.authority == 1) {
+                document.getElementById("Aut").innerHTML = "Certified user";
+            }
+            else if(obj.authority == 2) {
+                document.getElementById("Aut").innerHTML = "Admin";
+            }
         });
     });
 
