change password get username

--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -95,6 +95,33 @@
 </body>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
+    function getCookie(c_name)
+    {
+        if (document.cookie.length>0)
+        {
+            c_start=document.cookie.indexOf(c_name + "=")
+            if (c_start!=-1)
+            {
+                c_start=c_start + c_name.length+1
+                c_end=document.cookie.indexOf(";",c_start)
+                if (c_end==-1) c_end=document.cookie.length
+                return unescape(document.cookie.substring(c_start,c_end))
+            }
+        }
+        return ""
+    }
+    console.log("000000");
+    var username = getCookie('username');
+    console.log(username);
+    var userbtn = document.getElementById('userbtn');
+    if (username != "") {
+        userbtn.appendChild(document.createTextNode('welcome '));
+        userbtn.appendChild(document.createTextNode(username));
+    } else {
+        userbtn.appendChild(document.createTextNode('Login'));
+    }
+    var obj={};
+    obj.username = username;
 function check() {
 var pw1 = document.getElementById("newpassword").value;
 var pw2 = document.getElementById("newpassword2").value;
@@ -107,8 +134,7 @@ if(pw1 !== pw2) {
         return;
     }
     var res;
-    var obj = {};
-     obj.password = pw2;
+    obj.password = pw2;
      $(function(callback) {
          res = $.ajax({
              url: '/ChangePassword',
