--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -72,11 +72,23 @@
         border: 1px solid #888;
         width: 80%;
     }
+    #userbtn {
+        background-color: #0d57a0;
+        color: white;
+        padding: 5px 5px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 12%;
+    }
 
 
 </style>
 
 <body>
+<div id="usersection" align="right">
+    <button id="userbtn" type="button"></button>
+</div>
 
 <div class="middle">
     <form action="" method="post">
