change password finish

--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -155,6 +155,7 @@ if(pw1 !== pw2) {
              data: JSON.stringify(obj),
              contentType: "application/json; charset=utf-8",
              success: function (data) {
+                 console.log("success!");
                  callback(data);
              },
              error: function (error) {
