--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -14,38 +14,44 @@
     }
     .left {
         position: absolute;
-        top:140px; bottom: 0;
-        width: 278px;
+        width: 20px;
         color: white;
     }
     .main {
-        position: absolute;
+        height:100px;
+        margin-left:300px;
         font-size: 28px;
-        left:218px; top:60px; right:0; bottom:0;
         color: #fefefe;
     }
     a {
         color: white;
         font-size: medium;
     }
+
 </style>
 
-<body style="background-color:#1aa8a8">
-
+<body style="background-color:#1aa8a8; display: inline">
+<div class="uppertitle" ></div>
 <div class="top" style="float:left"><h1>WebDoctor</h1></div>
 <div class="top" style="float:left"><h1>/</h1></div>
 <div class="top" style="float:left"><h1 id = "path1"></h1></div>
 <div class="top" style="float:left"><h1>/</h1></div>
 <div class="top" style="float:left"><h1 id = "path2"></h1></div>
-<div class="left">
-    <a href="http://www.google.com" target="_blank">Related Articles</a><br>
-
 </div>
+
+<div class="left">
+    <h1>Related articles</h1>
+    <ul id="articleList">
+
+    </ul>
+</div>
+
 <button id="editbtn" id="Edit" type="button" onclick="jumpToEdit()">Edit</button>
 
 <div class="main"><h2 id="title">Description</h2>
-<p id="description"></p>
+    <p id="description"></p>
 </div>
+
 </body>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -74,7 +80,7 @@
             error: function (error) {
                 console.log(error);
             }
-        })
+        });
         var res = res.done(function(result) {
             console.log(res.responseText);
             obj = JSON.parse(res.responseText);
@@ -84,8 +90,28 @@
             document.getElementById("path2").value = obj.name;
             console.log("i set value");
             console.log(document.getElementById("path2").value);
+
+            var disease = obj.name;
+            console.log("------");
+            console.log(disease);
+
+            var articleList = $.ajax({
+                url: '/SendDisease',
+                type: 'POST',
+                dataType: 'json',
+                data : JSON.stringify(g),
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+                    console.log("success");
+                    callback(data);
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            }).done(function(result) {
+                console.log(result[0]);
+            });
         });
-//        console.log(res);
     });
 
     function jumpToEdit() {
