--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -142,7 +142,7 @@ function submitChange() {
     var title = document.getElementById('titleEle').value;
     obj.title = title;
     obj.content = content;
-    obj.username = username;
+    obj.author = username;
 
     console.log(obj);
     console.log("saved");
