--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -14,11 +14,13 @@
     }
     .left {
         position: absolute;
-        width: 20px;
+        width: 20%;
+        margin-top: 50px;
         color: white;
     }
     .main {
         height:100px;
+        margin-top: 50px;
         margin-left:300px;
         font-size: 28px;
         color: #fefefe;
