logo and page update

--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -39,11 +39,16 @@
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
-        border: none;
+        border: 1px groove #cccccc;
+        border-radius: 5px;
         cursor: pointer;
         width: 50%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
     .imgcontainer {
         text-align: center;
         margin: 24px 0 12px 0;
@@ -97,7 +102,7 @@
 
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
